test_suite/tests/ui/identifier/other_not_last.stderr
error: #[serde(other)] must be on the last variant
 --> tests/ui/identifier/other_not_last.rs:7:5
  |
7 | /     #[serde(other)]
8 | |     Other,
  | |_________^
